--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,8 +25,9 @@ jobs:
         python-version: "3.10.4"
     - name: Install dependencies
       run: |
+        cd /home/runner/work/anime-illust-image-searcher/anime-illust-image-searcher
         pip install -r requiements.txt
     - name: Mypy Check
       uses: jpetrucciani/mypy-check@master
       with:
-        path: .
+        path: /home/runner/work/anime-illust-image-searcher/anime-illust-image-searcher
