--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         cd /home/runner/work/anime-illust-image-searcher/anime-illust-image-searcher
         ls -l
-        pip install -r requiements.txt
+        pip install -r requirements.txt
     - name: Mypy Check
       uses: jpetrucciani/mypy-check@master
       with:
